# sesio__ccx

./: .ansible-lint  .awsprofile  .gitignore  Makefile  README.md
ansible/: ansible.cfg  site.yml
ansible/group_vars/: all.yml
ansible/group_vars/all/: base.yml  mcp.yml
control-plane/: README.md  pyproject.toml
control-plane/ccx/: __init__.py  agents.py  ccxd_cli.py  claude_provider.py  cli.py  monitor.py  monitor_tui.py  motd.py  sessions.py  ui.py
control-plane/ccx/ccxd/: __init__.py  __main__.py  api.py  discovery.py  hook_emitter.py  hooks.py  inotify.py  jsonl.py  server.py  state.py  store.py  tailer.py
control-plane/etc/: ccxd.service
control-plane/tests/: ccxctl.bats  test_cli.py  test_monitor.py  test_monitor_tui.py  test_motd.py  test_sessions.py
control-plane/tests/ccxd/: test_api.py  test_ccxd_cli.py  test_discovery.py  test_hook_emitter.py  test_hooks.py  test_inotify.py  test_integration.py  test_jsonl.py  test_main.py  test_server.py  test_state.py  test_store.py  test_tailer.py
docs/: agent-monitor.md
docs/plans/: 2026-04-26-codex-first-class-support-design.md  2026-04-26-codex-first-class-support.md
docs/superpowers/plans/: 2026-04-21-ccx-ansible.md  2026-04-21-ccx-control-plane.md  (+11 more)
dotfiles/: .gitconfig  .p10k.zsh  .tmux.conf  .zlogin  .zshrc  README.md
dotfiles/.claude/: CLAUDE.md  settings.json
dotfiles/.codex/: config.toml
terraform/: .terraform.lock.hcl  README.md  compute.tf  data.tf  dns.tf  iam.tf  outputs.tf  providers.tf  security.tf  ssm.tf  terraform.tfvars.example  user_data.tftpl  variables.tf  versions.tf
(+56 files in other folders)
