[project]
name = "ccx-cli"
version = "0.1.0"
description = "Control plane for the ccx coding station (AWS EC2 lifecycle + DNS + SSH)"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
ccxctl = "ccx.cli:app"
claude-bedrock = "ccx.claude_provider:bedrock"
claude-sub = "ccx.claude_provider:subscription"
claude-provider = "ccx.claude_provider:provider"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[ec2,route53,ssm]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
